--- a/pages/car-music.html
+++ b/pages/car-music.html
@@ -18,7 +18,7 @@
             <!-- Top Content -->
             <h3 class="text-2xl font-medium flex justify-start select-none">30°c</h3>
             <h3 class="text-2xl font-medium col-start-3 flex justify-end select-none">13:00</h3>
-            <!--Back to Index.html Mobile-->
+            <!--Back to Index.html-->
             <a href="index.html"
                 class="col-start-2 row-start-1 m-auto uppercase font-medium border-b-2 hover:border-pink-400 hover:text-pink-400 global-transition">Back
                 Home</a>
