added pointer cursor to the form button on subscribe.html

--- a/pages/subscribe.html
+++ b/pages/subscribe.html
@@ -39,7 +39,8 @@
                     <label for="submit" class="relative -mr-8 ml-5">
                         <div class="absolute transform translate-x-2 translate-y-2 h-full w-full -z-1 bg-form-btn">
                         </div>
-                        <input class="pl-6 pb-3 pt-5 pr-9 text-sm font-medium bg-transparent border-gray-800 border "
+                        <input
+                            class="pl-6 pb-3 pt-5 pr-9 text-sm font-medium bg-transparent border-gray-800 border cursor-pointer"
                             type="submit" value="Voilà!">
                     </label>
                 </form>
