added the structure for movie.html & added the bg img to the project

--- a/pages/movie.html
+++ b/pages/movie.html
@@ -11,6 +11,43 @@
 
 <body>
 
+    <div>
+        <!-- Menu -->
+        <div>
+            <a href="#">Movies</a>
+            <a href="#">TV Shows</a>
+            <a href="#">Playlists</a>
+            <a href="#">Settings</a>
+        </div>
+        <!-- Main Content -->
+        <div>
+            <h4>Critically Acclaimed Movies</h4>
+            <h1>Blade Runner 2049</h1>
+            <div>
+                <h5>2h 44m</h5>
+                <h5>R</h5> <!-- Consider to add the R Rated Logo-->
+            </div>
+            <p>Officer K (Ryan Gosling), a new blade runner for the Los Angeles Police Department, unearths a
+                long-buried secret that has the potential to plunge what's left of society into chaos. His discovery
+                leads him on a quest to find Rick Deckard (Harrison Ford), a former blade runner who's been missing for
+                30 years.
+            </p>
+            <p>Director: Denis Villeneuve</p>
+            <p>Cast: <a href="">Ryan Gosling</a>, <a href="">Harrison Ford</a>, <a href="">Ana de Armas</a></p>
+            <div>
+                <button>Watch Now</button>
+                <button>Add to List</button>
+            </div>
+        </div>
+        <!-- Movie Suggestions -->
+        <div>
+            <h3></h3>
+            <div>
+                <h6>Lady Bird</h6>
+                <h6>1h 30m</h6>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
