--- a/pages/subscribe.html
+++ b/pages/subscribe.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="#FFF75E">
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#FFF75E">
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#FFF75E">
     <title>Subscribe Form</title>
     <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
@@ -13,34 +19,35 @@
     <div class="h-screen w-screen flex justify-center items-center text-center">
         <!-- Box - Main Content Inside -->
         <div
-            class="border-gray-800 w-96 h-60 border rounded-2xl relative flex flex-col justify-center items-center p-5">
+            class="border-gray-800 w-96 border rounded-2xl relative flex flex-col justify-center items-center p-5 mx-5 md:h-60 md:mx-0 ">
             <a href="index.html"
                 class=" absolute -top-10 m-auto uppercase font-medium hover:text-red-700 global-transition z-10">Back
                 Home</a>
-            <div class="absolute transform -translate-x-3 translate-y-3 h-full w-full bg-form-bg rounded-2xl -z-1">
+            <div
+                class="absolute transform -translate-x-2 translate-y-2 md:-translate-x-3 md:translate-y-3 h-full w-full bg-form-bg rounded-2xl -z-1">
             </div>
             <!-- Text -->
             <div class="pb-5">
-                <h1 class="text-3xl font-semibold">Random Newsletter
+                <h1 class="text-2xl md:text-3xl font-semibold">Random Newsletter
                 </h1>
-                <p class="text-md mt-2">Subscribe to our randon newsletter. <br>
+                <p class="text-sm md:text-base mt-2">Subscribe to our randon newsletter. <br>
                     Why? Because you can.</p>
             </div>
             <!-- Form -->
             <div class="w-full z-0">
-                <form action="" class="relative flex">
-                    <label for="email" class="relative flex-grow">
+                <form action="" class="relative flex flex-col md:flex-row items-center justify-center ">
+                    <label for="email" class="relative flex-grow w-11/12 md:w-auto">
                         <div class="absolute transform translate-x-2 translate-y-2 h-full w-full -z-1 bg-white">
                         </div>
                         <input
-                            class="pl-6 pb-3 pt-5 pr-9 text-sm font-medium w-full bg-transparent border-gray-800 border"
+                            class="pl-6 pb-3 pt-5 pr-3 md:pr-9 text-xs md:text-sm font-medium w-full bg-transparent border-gray-800 border"
                             type="email" placeholder="Your Beautiful E-mail Address">
                     </label>
-                    <label for="submit" class="relative -mr-8 ml-5">
+                    <label for="submit" class="relative md:-mr-8 md:ml-5 md:mt-0 mt-5 w-11/12 md:w-auto">
                         <div class="absolute transform translate-x-2 translate-y-2 h-full w-full -z-1 bg-form-btn">
                         </div>
                         <input
-                            class="pl-6 pb-3 pt-5 pr-9 text-sm font-medium bg-transparent border-gray-800 border cursor-pointer"
+                            class="w-full md:w-auto pl-6 pb-3 pt-5 pr-9 text-sm font-medium bg-transparent border-gray-800 border cursor-pointer"
                             type="submit" value="Voilà!">
                     </label>
                 </form>
