--- a/pages/car-music.html
+++ b/pages/car-music.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="#0C3E4E">
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#0C3E4E">
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#0C3E4E">
     <link rel="stylesheet" href="../assets/css/styles.css">
     <title>Car Music Player</title>
 </head>
@@ -14,7 +20,7 @@
     <div
         class="relative bg-awaken-mob bg-center bg-no-repeat bg-cover h-full font-roboto flex justify-center items-center xl:h-3/5 xl:w-4/5 xl:rounded-xl xl:overflow-hidden xl:shadow-2xl 2xl:w-3/5">
         <div class="absolute bg-black opacity-70 z-0 w-full h-full"></div> <!-- Black Overlay -->
-        <main class="grid grid-cols-main grid-rows-main h-full p-10 z-10 text-gray-100 w-full ">
+        <main class="grid grid-cols-main grid-rows-main h-full p-6 md:p-10 z-10 text-gray-100 w-full ">
             <!-- Top Content -->
             <h3 class="text-2xl font-medium flex justify-start select-none">30°c</h3>
             <h3 class="text-2xl font-medium col-start-3 flex justify-end select-none">13:00</h3>
@@ -43,7 +49,7 @@
                 </div>
                 <!-- Player Bar End -->
                 <!--Controls-->
-                <div class="flex justify-between items-center w-4/5 mt-10">
+                <div class="flex justify-between items-center w-full md:w-4/5 mt-4">
                     <div class="w-8 hover:scale-110 transform global-transition">
                         <svg class="fill-current" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
