added product from other project, organized imgs in folders by project, and fixed a few small issues due to the new folders

--- a/pages/index.html
+++ b/pages/index.html
@@ -18,7 +18,8 @@
         Subscribe Form</a>
     <a class="hover:text-pink-600 mt-5 text-2xl transition-all duration-300 ease-in-out" href="car-music.html">
         Car Music Player</a>
-    <a class="hover:text-pink-600 mt-5 text-2xl transition-all duration-300 ease-in-out" href="">Product Page</a>
+    <a class="hover:text-pink-600 mt-5 text-2xl transition-all duration-300 ease-in-out" href="product.html">Product
+        Page</a>
 </body>
 
 </html>
