--- a/pages/index.html
+++ b/pages/index.html
@@ -36,7 +36,7 @@
     <div
         class="-my-6 md:-my-0 mx-2 md:px-4 py-2 border border-black bg-white flex items-center justify-center relative md:fixed md:top-1/2 md:left-1/2 md:-ml-80 md:-mt-8 text-black z-20">
         <h1 class="uppercase text-base md:text-4xl font-semibold">Tailwind CSS Project Collections</h1>
-        <a href="https://github.com/thebeautifultauren"
+        <a href="https://github.com/ohadosnat"
             class="bg-white border border-black p-1 absolute -bottom-7 md:-bottom-9 md:-ml-10 transform hover:scale-110 global-transition hover:text-pink-400">
             <svg class="w-6 h-6 md:w-8 md:h-8 stroke-current" viewBox="0 0 32 32" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
